@@ -1,7 +1,6 @@
 <ui>
   <menubar name="MenuBar">
     <menu action="FileMenu">
-      <menuitem action="New"/>
       <menuitem action="Export"/>
       <separator/>
       <menuitem action="Close"/>
@@ -27,8 +26,6 @@
     </menu>
   </menubar>
   <toolbar name="ToolBar">
-    <toolitem action="New"/>
-    <separator/>
     <toolitem action="Edit"/>
     <toolitem action="Drawing"/>
     <toolitem action="AddImage"/>
